srv/srv0srv.c
@@ -278,7 +278,6 @@ computer. Bigger computers need bigger values. Value 0 will disable the
 concurrency check. */
 
 UNIV_INTERN ulong	srv_thread_concurrency	= 0;
-UNIV_INTERN ulong	srv_commit_concurrency	= 0;
 
 /* this mutex protects srv_conc data structures */
 UNIV_INTERN os_fast_mutex_t	srv_conc_mutex;
